# JusticeAI

./: .replit  README.md  app.py  config.py  main.py  pyproject.toml
analysis/: __init__.py  question_answering.py  risk_analyzer.py  summarizer.py  text_processing.py
data/: __init__.py  legal_faq.py  legal_terms.py
gui/: __init__.py  document_tab.py  learn_tab.py  main_window.py  question_tab.py
templates/: ask_question.html  base.html  document_analysis.html  document_analysis_result.html  error.html  index.html  learn_terms.html  sample_document.html
utils/: __init__.py  document_processor.py  file_utils.py  ocr.py
